--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@ html {
   min-width: 300px;
   border-radius: 10px;
   padding: 0.5rem 2rem;
+  padding-bottom: 2rem;
 
   font-family: "Agdasima", sans-serif;
   text-align: center;
